--- a/src/widgets/countdowns/styles.css
+++ b/src/widgets/countdowns/styles.css
@@ -1,6 +1,6 @@
 #countdowns-container {
     position: relative;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
 }
 
